k8s/network-policies/default-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: secureflow
spec:
  podSelector: {}    # Applies to all pod in the secureflow namespace
  policyTypes:
    - Ingress 
    - Egress
