k8s/network-policies/notification-service-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-service-policy
  namespace: secureflow
spec:
  podSelector:
    matchLabels:
      app: notification-service
  policyTypes:
      - Ingress
      - Egress

  ingress:
    # Accept from order service
    - from:
        - podSelector:
            matchLabels:
                app: order-service
      ports:
        - protocol: TCP
          port: 8004

  egress:
    # Allow to Elasticache
    - to:
        - ipBlock:
            cidr: 10.0.0.0/16
      ports:
        - protocol: TCP
          port: 6379

    # Allow DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
