k8s/network-policies/notification-worker-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: notification-worker-policy
  namespace: secureflow
spec:
  podSelector:
    matchLabels:
      app: notification-worker
  policyTypes:
      - Ingress
      - Egress

  ingress:
    - {}   # No ingress needed - worker only pulls from Redis

  egress:
    # To Elastic redis cache
    - to:
        - ipBlock:
            cidr: 10.0.0.0/16

      ports:
        - protocol: TCP
          port: 6379

    # To DNS
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

      ports:
        - protocol: TCP
          port: 53

        - protocol: UDP
          port: 53
