k8s/network-policies/user-service-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-service-policy
  namespace: secureflow
spec:
  podSelector:
    matchLabels:
      app: user-service
  policyTypes:
    - Ingress 
    - Egress

  ingress:
    - from:
        - podSelector: 
            matchLabels: 
                app: api-gateway
      ports:
        - protocol: TCP
          port: 8001
  
  egress:
    # Allow to RDS PostgreSQL
    - to:
        - ipBlock:
            cidr: 10.0.0.0/16
      ports:
        - protocol: TCP
          port: 5432

    # Allow DNS
    - to:
        - namespaceSelector:
            matchLabels:
                kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
